@@ -957,8 +957,8 @@ ignored_types <STRING>
 	with a comma. The dot before the extension should not be added.
 	.diz, .message and .debug is normally generated by the zipscript, so
 	these types should be listed here. Also add types 3rd party scripts
-	commonly make, like .imdb, .html, .url, .m3u etc.
-	Default: ",diz,debug,message,imdb,html,url,m3u,metadata"
+	commonly make, like .imdb, .html, .url, .date etc.
+	Default: ",diz,debug,message,imdb,html,url,metadata,date,xxxdata,ioftpd"
 
 incomplete_base_nfo_indicator <STRING>
 	On upload an indicator is created after each file, to show still
